--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.sql.init.platform=h2
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:~/db_clinica_odontologica
 spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.password=sa
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 springdoc.swagger-ui.path=/docs
